Trigger redeploy with latest code 3, this time I swapped the Trash Takes svg for a PNG that was smaller

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -196,3 +196,10 @@ body {
 .navigation-menu-trigger:hover {
   background-color: #0056b3; /* Darker blue on hover */
 }
+
+/* Hide RotStar images on mobile */
+@media (max-width: 768px) {
+  .rotstar {
+    display: none;
+  }
+}
