--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -87,11 +87,11 @@ body.party #menu:hover{
   color: oklch(71.8% 0.202 349.761)
 }
 
-body.party #menu-selection a {
+body.party a {
   color: oklch(77.7% 0.152 181.912)
 }
 
-body.party #menu-selection a:hover {
+body.party a:hover {
   color: yellow
 }
 
